--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "scripts": {
     "format": "prettier --write .",
     "start": "react-scripts start",
+    "start-https": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
